SSDM-13365: fixed matlab readme and license